fix: Align GMAPS with Photo and Description

--- a/atw_classifier/static/styles3.css
+++ b/atw_classifier/static/styles3.css
@@ -40,9 +40,13 @@ header {
 }
 
 .viewer_class_img {
-    width: 100%;
+    width: 45%;
     height: auto;
   }
+
+.viewer_class_img_container {
+  height: auto;
+}
 
 .viewer_class_img_horizontal {
     width: 100%;
@@ -86,6 +90,29 @@ ul {
 li {
     display: inline-block;
     margin-right: 20px;
+    
+}
+
+.li_line {
+  border: 1px solid;
+  /*padding: 10px;*/
+  background: #d3d3d3;
+  box-shadow: 5px 10px;
+  margin-bottom: 20px;
+}
+
+.li_line_photo {
+  border: 1px solid;
+  border-color:rgb(1, 8, 19);
+  /*padding: 10px;*/
+  background: #0a0c0f;
+
+  margin-bottom: 20px;
+}
+
+.li_line_photo:hover {
+  background: #d3d3d3;
+  box-shadow: 5px 10px;
 }
 
 a {
@@ -170,6 +197,8 @@ a.button.blue {
     border: solid 1px #5c8d9f;
     box-shadow: inset 0 10px 15px 0 #79b9d2; }
 
+
+
 /* TABLE DATA ANALYSIS */
 
 table{
@@ -225,6 +254,154 @@ table{
   .slider_rad::-moz-range-thumb {
     width: 25px;
     height: 25px;
-    background: #4CAF50;
+    background: #42788e;
     cursor: pointer;
   }
+
+.label_descr {
+  color: #42788e;
+}
+
+
+
+/* Photo Viewer*/
+
+/* The Modal (background) */
+.modal_photo {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal_photo-content {
+  position: relative;
+  background-color: black;
+  margin: auto;
+  padding: 0;
+  width: 100%;
+  height: auto;
+  /*max-width: 1200px;*/
+  text-align: center;
+}
+
+/* The Close Button */
+.close_photo {
+  color: white;
+  position: absolute;
+  top: 100px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close_photo:hover,
+.close_photo:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.Slides_photo {
+  display: none;
+}
+
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+
+/* Next & previous buttons */
+.prev_photo,
+.next_photo {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next_photo {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev_photo {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev_photo:hover,
+.next_photo:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext_photo {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+
+/*Play Pause*/
+.play {
+    width: 0;
+    height: 0;
+    border-top: 8px solid transparent;
+    border-left: 12px solid #000;
+    border-bottom: 8px solid transparent;
+}
+.pause {
+    width: 4px;
+    height: 16px;
+    border-right: 4px solid #000;
+    border-left: 4px solid #000;
+}
+
+.btn_change:active {
+  /*background: #abe4f8;*/
+  background-color:red;
+}
+
+
+/* SHOW DIV ONLY ON HOVER*/
+.hover_tag:hover {
+    background-color: black;
+}
+.hover_tag:hover img{
+	visibility:hidden;
+}
+
+/* IMAGE LARGE -- FULLSCREEN*/
+.bg {
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
